# iced_timeline

./: Cargo.toml  LICENSE  README.md
examples/: text_widget_timeline.rs
src/: lib.rs
